--- a/src/home/home.css
+++ b/src/home/home.css
@@ -1,13 +1,12 @@
-.bloque1{
-    display: flex;
-    flex-direction: row;
-    flex-wrap: wrap;
-    justify-content: center;
-
+#root {
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+  justify-content: center;
+  row-gap: 35px;
 }
-  
- 
- .house {
+
+.house {
   cursor: pointer;
 }
 
@@ -20,8 +19,8 @@
   height: 238px;
   width: 395px;
   overflow: hidden;
-  display: flex;
-  align-items: center;
+  /*display: flex;
+  align-items: center;*/
   border-radius: 24px;
 }
 
@@ -32,24 +31,23 @@
 }
 
 .house {
-  padding: 20px 0;
+  padding: 20px 7px;
   font-size: 14px;
 }
 
 .detalles {
-    width: 350px;
+  width: 350px;
   display: flex;
   flex-direction: row;
-  align-items:baseline;
+  align-items: baseline;
   justify-content: space-between;
   padding-bottom: 18px;
-  padding-top:15px;
-  
-  
+  padding-top: 15px;
 }
 
 .superHost {
   font-size: 12px;
+  font-family: Montserrat;
   line-height: 15px;
   color: #4f4f4f;
   font-weight: 700;
@@ -60,9 +58,14 @@
   padding: 7px 9px;
 }
 
-.Type {
+.type {
   color: #828282;
   line-height: 17px;
+  font-family: Montserrat;
+  font-size: 14px;
+  font-weight: 500;
+  letter-spacing: 0em;
+  text-align: left;
 }
 
 .homeStars {
@@ -73,9 +76,21 @@
 }
 
 .Title {
-  all: unset;
+  font-family: Montserrat;
+  font-size: 16px;
+  font-weight: 600;
+  line-height: 20px;
+  letter-spacing: 0em;
+  text-align: left;
 }
-
+.rating {
+  font-family: Montserrat;
+  font-size: 14px;
+  font-weight: 500;
+  line-height: 17px;
+  letter-spacing: 0em;
+  text-align: left;
+}
 .Title {
   color: #333;
   font-size: 16px;
