--- a/src/nav/Nav.css
+++ b/src/nav/Nav.css
@@ -26,6 +26,9 @@ align-items: center;
     width: 100%;
     display:flex;
     justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    
     
 }
 
@@ -38,6 +41,7 @@ display: flex;
 justify-content: space-between;
 align-items: center;
 position: relative;
+
 
 border-radius: 16px;
 }
@@ -65,7 +69,7 @@ nav>div:first-child>input{
 }
 nav > div:nth-child(2){
    
-    padding: 20px 30px;
+    height: 100%;
   
 }
 nav > div:nth-child(2) > p{
@@ -76,20 +80,56 @@ nav > div:nth-child(2) > p{
 }
 nav > div:nth-child(2) >input{
     width: 100%;
- 
+    height: 100%;
+    background-color: white;
     outline: 0;
     border: 0;
-    font-size: 1rem; 
+    font-size: 1.5rem;
+    text-align: center;
+    cursor:pointer
 }
 
 nav > div:not(:last-child){
 border-right:  1px solid #F2F2F2;
 }
 
-nav > div:last-child>button{
-background-color: #EB5757;
-border: 0px;
-padding: 0.5rem;
-border-radius: 10px;
-color: white;
+nav > div:last-child{
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
+
+nav > div:last-child>button{
+    background-color: #EB5757;
+    border: 0px;
+    padding: 1rem 2rem;
+    border-radius: 15px;
+    color: white;
+    font-size: 1rem;
+    cursor: pointer;
+    }
+    
+#div-toggles{
+    width: 90%;
+    display: flex;
+}
+
+#div-toggles>div {
+    width: 33%;
+    background-color: aqua;
+}
+
+#toggle1{
+    padding-left: 1rem;
+}
+#toggle1> ul{
+list-style: none;
+display: flex;
+flex-direction: column;
+gap: 1rem;
+   }
+
+   #toggle1> ul>li:hover{
+  cursor: pointer;
+  text-decoration: underline;
+       }
